--- a/examples/demonstration/1. demo_DGPRCT1.ipynb
+++ b/examples/demonstration/1. demo_DGPRCT1.ipynb
@@ -35,7 +35,8 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "ss = andes.load('/home/jwang175/andes/andes/cases/ieee14/ieee14_dgprct1.xlsx', setup=False)"
+    "ss = andes.load(get_case('ieee14/ieee14_dgprct1.xlsx'), setup=False,\n",
+    "                no_output=True)"
    ],
    "outputs": [
     {
@@ -46,7 +47,7 @@
       "Loaded config from file \"/home/jwang175/.andes/andes.rc\"\n",
       "Using generated Python code.\n",
       "Parsing input file \"/home/jwang175/andes/andes/cases/ieee14/ieee14_dgprct1.xlsx\"...\n",
-      "Input file parsed in 0.3977 seconds.\n"
+      "Input file parsed in 0.3669 seconds.\n"
      ]
     }
    ],
@@ -56,33 +57,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "# modify parameters for function test\n",
-    "\n",
-    "# # observe fl1\n",
-    "# fl1set = 59.90\n",
-    "# fl2set = 59.85\n",
-    "\n",
-    "# # # observe fl2\n",
-    "# # fl1set = 59.95\n",
-    "# # fl2set = 59.9\n",
-    "\n",
-    "# ss.DGPRCT1.fl1.v = [fl1set]\n",
-    "# ss.DGPRCT1.fl2.v = [fl2set]\n",
-    "\n",
-    "# ss.DGPRCT1.Tfl1.v = [2.5]\n",
-    "# ss.DGPRCT1.Tfl2.v = [3.5]\n",
-    "\n",
-    "# DGPRCT1df = ss.DGPRCT1.as_df()\n",
-    "# print(DGPRCT1df[['idx', 'u', 'name', 'dev', 'busfreq',\n",
-    "#               'fl3', 'fl2', 'fl1', 'Tfl1', 'Tfl2']])"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "source": [
     "ss.setup()"
    ],
    "outputs": [
@@ -90,7 +64,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "System internal structure set up in 0.0364 seconds.\n"
+      "System internal structure set up in 0.0327 seconds.\n"
      ]
     },
     {
@@ -101,14 +75,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 3
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "source": [
     "# use constant power model for PQ\n",
     "ss.PQ.config.p2p = 1\n",
@@ -139,8 +113,7 @@
       "1: |F(x)| = 0.006138129294\n",
       "2: |F(x)| = 5.708068995e-06\n",
       "3: |F(x)| = 5.716302431e-12\n",
-      "Converged in 4 iterations in 0.0136 seconds.\n",
-      "Report saved to \"ieee14_dgprct1_out.txt\" in 0.0021 seconds.\n"
+      "Converged in 4 iterations in 0.0074 seconds.\n"
      ]
     },
     {
@@ -151,7 +124,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 4
     }
    ],
    "metadata": {
@@ -160,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "source": [
     "ss.TDS.config.tf = 20\n",
     "ss.TDS.run()"
@@ -183,7 +156,7 @@
       " TGOV1_3 | zl   | 0.300       | 0.300\n",
       "\n",
       "\n",
-      "Initialization for dynamics was successful in 0.0499 seconds.\n"
+      "Initialization for dynamics was successful in 0.0452 seconds.\n"
      ]
     },
     {
@@ -192,16 +165,14 @@
      "text": [
       "<Toggler 1>: StaticLoad.PQ_12 status changed to 1 at t=1.0 sec.\n",
       "<Toggler 2>: StaticLoad.PQ_12 status changed to 0 at t=10.0 sec.\n",
-      "100%|████████████████████████████████| 100/100 [00:05<00:00, 19.74%/s]"
+      "100%|████████████████████████████████| 100/100 [00:05<00:00, 19.35%/s]"
      ]
     },
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Simulation completed in 5.0677 seconds.\n",
-      "Outputs to \"ieee14_dgprct1_out.lst\" and \"ieee14_dgprct1_out.npz\".\n",
-      "Outputs written in 0.0612 seconds.\n"
+      "Simulation completed in 5.1680 seconds.\n"
      ]
     },
     {
@@ -219,14 +190,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 5
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "source": [
     "ss.exit_code"
    ],
@@ -239,34 +210,10 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 6
     }
    ],
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "source": [
-    "# find variables\n",
-    "\n",
-    "ss.TDS.plt.find('IAWfl')"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "([116, 117], ['IAWfl1_y DGPRCT1 1', 'IAWfl2_y DGPRCT1 1'])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 9
-    }
-   ],
-   "metadata": {
-    "scrolled": true
-   }
   },
   {
    "cell_type": "markdown",
@@ -286,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "source": [
     "ss.TDS.plt.plot(ss.BusFreq.f,\n",
     "                a=(3),\n",
@@ -332,7 +279,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 7
     }
    ],
    "metadata": {}
@@ -348,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "source": [
     "ss.TDS.plt.plot(ss.PVD1.fHz,\n",
     "                a=(0,1),\n",
@@ -395,7 +342,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 8
     }
    ],
    "metadata": {}
@@ -413,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "source": [
     "ss.TDS.plt.plot(ss.PVD1.Psum,\n",
     "                a=(0,1),\n",
@@ -457,7 +404,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 9
     }
    ],
    "metadata": {}
@@ -475,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "source": [
     "ss.TDS.plt.plot(ss.PVD1.Ipul,\n",
     "                a=(0,1),\n",
@@ -519,7 +466,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 10
     }
    ],
    "metadata": {}
@@ -541,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "source": [
     "ss.TDS.plt.plot(ss.PVD1.Ipout_y,\n",
     "                a=(0,1),\n",
@@ -585,7 +532,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 11
     }
    ],
    "metadata": {}
@@ -599,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "source": [
     "!andes misc -C"
    ],
@@ -609,14 +556,12 @@
      "name": "stdout",
      "text": [
       "\n",
-      "    _           _         | Version 1.3.12.post58.dev0+g2e749f50\n",
-      "   /_\\  _ _  __| |___ ___ | Python 3.7.10 on Linux, 09/01/2021 09:04:05 PM\n",
+      "    _           _         | Version 1.3.12.post59.dev0+gf5acc13b\n",
+      "   /_\\  _ _  __| |___ ___ | Python 3.7.10 on Linux, 09/01/2021 09:42:45 PM\n",
       "  / _ \\| ' \\/ _` / -_|_-< | \n",
       " /_/ \\_\\_||_\\__,_\\___/__/ | This program comes with ABSOLUTELY NO WARRANTY.\n",
       "\n",
-      "\"/home/jwang175/andes/examples/demonstration/ieee14_dgprct1_out.npz\" removed.\n",
-      "\"/home/jwang175/andes/examples/demonstration/ieee14_dgprct1_out.txt\" removed.\n",
-      "\"/home/jwang175/andes/examples/demonstration/ieee14_dgprct1_out.lst\" removed.\n"
+      "No output file found in the working directory.\n"
      ]
     }
    ],
