--- a/examples/demonstration/1. demo_DGPRCT1.ipynb
+++ b/examples/demonstration/1. demo_DGPRCT1.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "source": [
     "import andes\n",
     "from andes.utils.paths import get_case\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "source": [
     "ss = andes.load(get_case('ieee14/ieee14_dgprct1.xlsx'), setup=False,\n",
     "                no_output=True)"
@@ -47,7 +47,7 @@
       "Loaded config from file \"/home/jwang175/.andes/andes.rc\"\n",
       "Using generated Python code.\n",
       "Parsing input file \"/home/jwang175/andes/andes/cases/ieee14/ieee14_dgprct1.xlsx\"...\n",
-      "Input file parsed in 0.3669 seconds.\n"
+      "Input file parsed in 0.1278 seconds.\n"
      ]
     }
    ],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "source": [
     "ss.setup()"
    ],
@@ -64,7 +64,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "System internal structure set up in 0.0327 seconds.\n"
+      "System internal structure set up in 0.0293 seconds.\n"
      ]
     },
     {
@@ -75,14 +75,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 15
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "source": [
     "# use constant power model for PQ\n",
     "ss.PQ.config.p2p = 1\n",
@@ -113,7 +113,7 @@
       "1: |F(x)| = 0.006138129294\n",
       "2: |F(x)| = 5.708068995e-06\n",
       "3: |F(x)| = 5.716302431e-12\n",
-      "Converged in 4 iterations in 0.0074 seconds.\n"
+      "Converged in 4 iterations in 0.0118 seconds.\n"
      ]
     },
     {
@@ -124,7 +124,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 16
     }
    ],
    "metadata": {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "source": [
     "ss.TDS.config.tf = 20\n",
     "ss.TDS.run()"
@@ -156,7 +156,7 @@
       " TGOV1_3 | zl   | 0.300       | 0.300\n",
       "\n",
       "\n",
-      "Initialization for dynamics was successful in 0.0452 seconds.\n"
+      "Initialization for dynamics was successful in 0.0495 seconds.\n"
      ]
     },
     {
@@ -165,14 +165,14 @@
      "text": [
       "<Toggler 1>: StaticLoad.PQ_12 status changed to 1 at t=1.0 sec.\n",
       "<Toggler 2>: StaticLoad.PQ_12 status changed to 0 at t=10.0 sec.\n",
-      "100%|████████████████████████████████| 100/100 [00:05<00:00, 19.35%/s]"
+      "100%|████████████████████████████████| 100/100 [00:05<00:00, 19.24%/s]"
      ]
     },
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Simulation completed in 5.1680 seconds.\n"
+      "Simulation completed in 5.1982 seconds.\n"
      ]
     },
     {
@@ -190,14 +190,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 17
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "source": [
     "ss.exit_code"
    ],
@@ -210,7 +210,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 18
     }
    ],
    "metadata": {}
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "source": [
     "ss.TDS.plt.plot(ss.BusFreq.f,\n",
     "                a=(3),\n",
@@ -279,7 +279,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 19
     }
    ],
    "metadata": {}
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "source": [
     "ss.TDS.plt.plot(ss.PVD1.fHz,\n",
     "                a=(0,1),\n",
@@ -342,7 +342,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 20
     }
    ],
    "metadata": {}
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "source": [
     "ss.TDS.plt.plot(ss.PVD1.Psum,\n",
     "                a=(0,1),\n",
@@ -404,7 +404,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 21
     }
    ],
    "metadata": {}
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "source": [
     "ss.TDS.plt.plot(ss.PVD1.Ipul,\n",
     "                a=(0,1),\n",
@@ -466,7 +466,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 22
     }
    ],
    "metadata": {}
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "source": [
     "ss.TDS.plt.plot(ss.PVD1.Ipout_y,\n",
     "                a=(0,1),\n",
@@ -532,7 +532,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 23
     }
    ],
    "metadata": {}
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "source": [
     "!andes misc -C"
    ],
@@ -556,8 +556,8 @@
      "name": "stdout",
      "text": [
       "\n",
-      "    _           _         | Version 1.3.12.post59.dev0+gf5acc13b\n",
-      "   /_\\  _ _  __| |___ ___ | Python 3.7.10 on Linux, 09/01/2021 09:42:45 PM\n",
+      "    _           _         | Version 1.3.12.post60+g3e2a333d\n",
+      "   /_\\  _ _  __| |___ ___ | Python 3.7.10 on Linux, 09/01/2021 09:45:06 PM\n",
       "  / _ \\| ' \\/ _` / -_|_-< | \n",
       " /_/ \\_\\_||_\\__,_\\___/__/ | This program comes with ABSOLUTELY NO WARRANTY.\n",
       "\n",
