Updated all notebooks.

--- a/examples/3. eigenvalue.ipynb
+++ b/examples/3. eigenvalue.ipynb
@@ -19,10 +19,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:08.877272Z",
-     "iopub.status.busy": "2021-09-19T22:23:08.876835Z",
-     "iopub.status.idle": "2021-09-19T22:23:09.596426Z",
-     "shell.execute_reply": "2021-09-19T22:23:09.596078Z"
+     "iopub.execute_input": "2021-09-26T22:41:51.305680Z",
+     "iopub.status.busy": "2021-09-26T22:41:51.305313Z",
+     "iopub.status.idle": "2021-09-26T22:41:51.838406Z",
+     "shell.execute_reply": "2021-09-26T22:41:51.838711Z"
     }
    },
    "outputs": [],
@@ -36,10 +36,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:09.601107Z",
-     "iopub.status.busy": "2021-09-19T22:23:09.600696Z",
-     "iopub.status.idle": "2021-09-19T22:23:09.603158Z",
-     "shell.execute_reply": "2021-09-19T22:23:09.602724Z"
+     "iopub.execute_input": "2021-09-26T22:41:51.841517Z",
+     "iopub.status.busy": "2021-09-26T22:41:51.840878Z",
+     "iopub.status.idle": "2021-09-26T22:41:51.844084Z",
+     "shell.execute_reply": "2021-09-26T22:41:51.844562Z"
     }
    },
    "outputs": [],
@@ -59,10 +59,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:09.606164Z",
-     "iopub.status.busy": "2021-09-19T22:23:09.605892Z",
-     "iopub.status.idle": "2021-09-19T22:23:29.683433Z",
-     "shell.execute_reply": "2021-09-19T22:23:29.683805Z"
+     "iopub.execute_input": "2021-09-26T22:41:51.846712Z",
+     "iopub.status.busy": "2021-09-26T22:41:51.846110Z",
+     "iopub.status.idle": "2021-09-26T22:41:52.746189Z",
+     "shell.execute_reply": "2021-09-26T22:41:52.746774Z"
     }
    },
    "outputs": [
@@ -98,14 +98,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Input file parsed in 0.3559 seconds.\n"
+      "Input file parsed in 0.3769 seconds.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "System internal structure set up in 0.0383 seconds.\n"
+      "System internal structure set up in 0.0370 seconds.\n"
      ]
     },
     {
@@ -145,13 +145,6 @@
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
       " Sparse addition: Fast in-place (kvxopt)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Numba compilation initiated, parallel=False, cache=True.\n"
      ]
     },
     {
@@ -200,28 +193,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Converged in 5 iterations in 0.0054 seconds.\n"
+      "Converged in 5 iterations in 0.0101 seconds.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Numba compilation initiated, parallel=False, cache=True.\n"
+      "Report saved to \"kundur_full_out.txt\" in 0.0022 seconds.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Initialization for dynamics was successful in 10.8429 seconds.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Report saved to \"kundur_full_out.txt\" in 0.0026 seconds.\n"
+      "Initialization for dynamics was successful in 0.0153 seconds.\n"
      ]
     },
     {
@@ -257,7 +243,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Eigenvalue analysis finished in 0.3485 seconds.\n"
+      "Eigenvalue analysis finished in 0.1786 seconds.\n"
      ]
     },
     {
@@ -271,7 +257,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-> Single process finished in 20.0722 seconds.\n"
+      "-> Single process finished in 0.8897 seconds.\n"
      ]
     }
    ],
@@ -291,10 +277,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:29.687579Z",
-     "iopub.status.busy": "2021-09-19T22:23:29.687095Z",
-     "iopub.status.idle": "2021-09-19T22:23:30.377969Z",
-     "shell.execute_reply": "2021-09-19T22:23:30.377677Z"
+     "iopub.execute_input": "2021-09-26T22:41:52.768563Z",
+     "iopub.status.busy": "2021-09-26T22:41:52.768058Z",
+     "iopub.status.idle": "2021-09-26T22:41:53.540092Z",
+     "shell.execute_reply": "2021-09-26T22:41:53.540496Z"
     }
    },
    "outputs": [
@@ -340,10 +326,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:30.380924Z",
-     "iopub.status.busy": "2021-09-19T22:23:30.380655Z",
-     "iopub.status.idle": "2021-09-19T22:23:30.383696Z",
-     "shell.execute_reply": "2021-09-19T22:23:30.383472Z"
+     "iopub.execute_input": "2021-09-26T22:41:53.546062Z",
+     "iopub.status.busy": "2021-09-26T22:41:53.545595Z",
+     "iopub.status.idle": "2021-09-26T22:41:53.548872Z",
+     "shell.execute_reply": "2021-09-26T22:41:53.548508Z"
     },
     "scrolled": true
    },
@@ -352,12 +338,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ANDES 1.4.2.post33.dev0+g135cb3eb\n",
+      "ANDES 1.4.2.post116.dev0+g832274a7\n",
       "Copyright (C) 2015-2021 Hantao Cui\n",
       "\n",
       "ANDES comes with ABSOLUTELY NO WARRANTY\n",
       "Case file: /home/hcui7/repos/andes/andes/cases/kundur/kundur_full.xlsx\n",
-      "Report time: 09/19/2021 05:23:29 PM\n",
+      "Report time: 09/26/2021 05:41:52 PM\n",
       "\n",
       "Power flow converged in 5 iterations.\n",
       "Flat-start: No\n",
@@ -894,10 +880,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:30.386272Z",
-     "iopub.status.busy": "2021-09-19T22:23:30.386038Z",
-     "iopub.status.idle": "2021-09-19T22:23:31.101483Z",
-     "shell.execute_reply": "2021-09-19T22:23:31.101232Z"
+     "iopub.execute_input": "2021-09-26T22:41:53.557089Z",
+     "iopub.status.busy": "2021-09-26T22:41:53.556654Z",
+     "iopub.status.idle": "2021-09-26T22:41:54.650792Z",
+     "shell.execute_reply": "2021-09-26T22:41:54.650033Z"
     }
    },
    "outputs": [
@@ -906,15 +892,21 @@
      "output_type": "stream",
      "text": [
       "\r\n",
-      "    _           _         | Version 1.4.2.post33.dev0+g135cb3eb\r\n",
-      "   /_\\  _ _  __| |___ ___ | Python 3.9.6 on Linux, 09/19/2021 05:23:30 PM\r\n",
+      "    _           _         | Version 1.4.2.post116.dev0+g832274a7\r\n",
+      "   /_\\  _ _  __| |___ ___ | Python 3.9.6 on Linux, 09/26/2021 05:41:54 PM\r\n",
       "  / _ \\| ' \\/ _` / -_|_-< | \r\n",
       " /_/ \\_\\_||_\\__,_\\___/__/ | This program comes with ABSOLUTELY NO WARRANTY.\r\n",
       "\r\n",
+      "\"/home/hcui7/repos/andes/examples/kundur_out.lst\" removed.\r\n",
+      "\"/home/hcui7/repos/andes/examples/ieee14_out.lst\" removed.\r\n",
       "\"/home/hcui7/repos/andes/examples/kundur_out.txt\" removed.\r\n",
+      "\"/home/hcui7/repos/andes/examples/ieee14_out.txt\" removed.\r\n",
       "\"/home/hcui7/repos/andes/examples/kundur_full_out.txt\" removed.\r\n",
       "\"/home/hcui7/repos/andes/examples/kundur_full_out.npz\" removed.\r\n",
+      "\"/home/hcui7/repos/andes/examples/kundur_out.npz\" removed.\r\n",
       "\"/home/hcui7/repos/andes/examples/kundur_full_eig.txt\" removed.\r\n",
+      "\"/home/hcui7/repos/andes/examples/kundur_full_out.csv\" removed.\r\n",
+      "\"/home/hcui7/repos/andes/examples/ieee14_out.npz\" removed.\r\n",
       "\"/home/hcui7/repos/andes/examples/kundur_full_out.lst\" removed.\r\n"
      ]
     }
