--- a/examples/4. inspect_models.ipynb
+++ b/examples/4. inspect_models.ipynb
@@ -25,10 +25,10 @@
      "start_time": "2021-03-18T00:41:43.446521Z"
     },
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:09.016955Z",
-     "iopub.status.busy": "2021-09-19T22:23:09.016552Z",
-     "iopub.status.idle": "2021-09-19T22:23:09.676284Z",
-     "shell.execute_reply": "2021-09-19T22:23:09.676985Z"
+     "iopub.execute_input": "2021-09-26T22:41:50.927219Z",
+     "iopub.status.busy": "2021-09-26T22:41:50.926922Z",
+     "iopub.status.idle": "2021-09-26T22:41:51.686459Z",
+     "shell.execute_reply": "2021-09-26T22:41:51.686018Z"
     }
    },
    "outputs": [],
@@ -63,10 +63,10 @@
      "start_time": "2021-03-18T00:41:43.999303Z"
     },
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:09.679861Z",
-     "iopub.status.busy": "2021-09-19T22:23:09.679107Z",
-     "iopub.status.idle": "2021-09-19T22:23:23.658247Z",
-     "shell.execute_reply": "2021-09-19T22:23:23.657829Z"
+     "iopub.execute_input": "2021-09-26T22:41:51.688757Z",
+     "iopub.status.busy": "2021-09-26T22:41:51.688526Z",
+     "iopub.status.idle": "2021-09-26T22:42:05.534738Z",
+     "shell.execute_reply": "2021-09-26T22:42:05.534462Z"
     }
    },
    "outputs": [
@@ -74,7 +74,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating code for 78 models on 32 processes.\n"
+      "Generating code for 80 models on 32 processes.\n"
      ]
     }
    ],
@@ -99,10 +99,10 @@
      "start_time": "2021-03-18T00:42:51.621593Z"
     },
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:23.663607Z",
-     "iopub.status.busy": "2021-09-19T22:23:23.663231Z",
-     "iopub.status.idle": "2021-09-19T22:23:23.665438Z",
-     "shell.execute_reply": "2021-09-19T22:23:23.665053Z"
+     "iopub.execute_input": "2021-09-26T22:42:05.538880Z",
+     "iopub.status.busy": "2021-09-26T22:42:05.538580Z",
+     "iopub.status.idle": "2021-09-26T22:42:05.541651Z",
+     "shell.execute_reply": "2021-09-26T22:42:05.541386Z"
     }
    },
    "outputs": [
@@ -125,7 +125,7 @@
       " DGProtection      | DGPRCT1, DGPRCTExt                                       \n",
       " DynLoad           | ZIP, FLoad                                               \n",
       " Exciter           | EXDC2, IEEEX1, ESDC2A, EXST1, ESST3A, SEXS, IEEET1,      \n",
-      "                   | EXAC1, EXAC4, ESST4B                                     \n",
+      "                   | EXAC1, EXAC4, ESST4B, AC8B, IEEET3                       \n",
       " Experimental      | PI2, TestDB1, TestPI, TestLagAWFreeze, FixedGen          \n",
       " FreqMeasurement   | BusFreq, BusROCOF                                        \n",
       " Information       | Summary                                                  \n",
@@ -180,10 +180,10 @@
      "start_time": "2021-03-18T00:42:51.633592Z"
     },
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:23.673125Z",
-     "iopub.status.busy": "2021-09-19T22:23:23.672474Z",
-     "iopub.status.idle": "2021-09-19T22:23:23.675413Z",
-     "shell.execute_reply": "2021-09-19T22:23:23.675070Z"
+     "iopub.execute_input": "2021-09-26T22:42:05.551103Z",
+     "iopub.status.busy": "2021-09-26T22:42:05.550856Z",
+     "iopub.status.idle": "2021-09-26T22:42:05.553625Z",
+     "shell.execute_reply": "2021-09-26T22:42:05.553424Z"
     }
    },
    "outputs": [
@@ -355,10 +355,10 @@
      "start_time": "2021-03-18T00:42:51.652044Z"
     },
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:23.681758Z",
-     "iopub.status.busy": "2021-09-19T22:23:23.681432Z",
-     "iopub.status.idle": "2021-09-19T22:23:23.683526Z",
-     "shell.execute_reply": "2021-09-19T22:23:23.683801Z"
+     "iopub.execute_input": "2021-09-26T22:42:05.559067Z",
+     "iopub.status.busy": "2021-09-26T22:42:05.558830Z",
+     "iopub.status.idle": "2021-09-26T22:42:05.563908Z",
+     "shell.execute_reply": "2021-09-26T22:42:05.563237Z"
     }
    },
    "outputs": [
@@ -393,10 +393,10 @@
      "start_time": "2021-03-18T00:42:51.664357Z"
     },
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:23.686517Z",
-     "iopub.status.busy": "2021-09-19T22:23:23.686279Z",
-     "iopub.status.idle": "2021-09-19T22:23:23.688904Z",
-     "shell.execute_reply": "2021-09-19T22:23:23.688633Z"
+     "iopub.execute_input": "2021-09-26T22:42:05.566343Z",
+     "iopub.status.busy": "2021-09-26T22:42:05.566091Z",
+     "iopub.status.idle": "2021-09-26T22:42:05.569646Z",
+     "shell.execute_reply": "2021-09-26T22:42:05.569232Z"
     }
    },
    "outputs": [
@@ -425,10 +425,10 @@
      "start_time": "2021-03-18T00:42:51.671386Z"
     },
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:23.691665Z",
-     "iopub.status.busy": "2021-09-19T22:23:23.691420Z",
-     "iopub.status.idle": "2021-09-19T22:23:23.693692Z",
-     "shell.execute_reply": "2021-09-19T22:23:23.693428Z"
+     "iopub.execute_input": "2021-09-26T22:42:05.572435Z",
+     "iopub.status.busy": "2021-09-26T22:42:05.572029Z",
+     "iopub.status.idle": "2021-09-26T22:42:05.574150Z",
+     "shell.execute_reply": "2021-09-26T22:42:05.573748Z"
     }
    },
    "outputs": [
@@ -486,10 +486,10 @@
      "start_time": "2021-03-18T00:42:51.692982Z"
     },
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:23.696348Z",
-     "iopub.status.busy": "2021-09-19T22:23:23.696088Z",
-     "iopub.status.idle": "2021-09-19T22:23:23.698515Z",
-     "shell.execute_reply": "2021-09-19T22:23:23.698279Z"
+     "iopub.execute_input": "2021-09-26T22:42:05.576738Z",
+     "iopub.status.busy": "2021-09-26T22:42:05.576419Z",
+     "iopub.status.idle": "2021-09-26T22:42:05.579264Z",
+     "shell.execute_reply": "2021-09-26T22:42:05.578966Z"
     }
    },
    "outputs": [
@@ -517,10 +517,10 @@
      "start_time": "2021-03-18T00:42:51.712205Z"
     },
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:23.700759Z",
-     "iopub.status.busy": "2021-09-19T22:23:23.700525Z",
-     "iopub.status.idle": "2021-09-19T22:23:23.702939Z",
-     "shell.execute_reply": "2021-09-19T22:23:23.702705Z"
+     "iopub.execute_input": "2021-09-26T22:42:05.581659Z",
+     "iopub.status.busy": "2021-09-26T22:42:05.581354Z",
+     "iopub.status.idle": "2021-09-26T22:42:05.584077Z",
+     "shell.execute_reply": "2021-09-26T22:42:05.583811Z"
     }
    },
    "outputs": [
@@ -548,10 +548,10 @@
      "start_time": "2021-03-18T00:42:51.761462Z"
     },
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:23.705034Z",
-     "iopub.status.busy": "2021-09-19T22:23:23.704191Z",
-     "iopub.status.idle": "2021-09-19T22:23:23.706639Z",
-     "shell.execute_reply": "2021-09-19T22:23:23.706387Z"
+     "iopub.execute_input": "2021-09-26T22:42:05.586634Z",
+     "iopub.status.busy": "2021-09-26T22:42:05.586287Z",
+     "iopub.status.idle": "2021-09-26T22:42:05.588325Z",
+     "shell.execute_reply": "2021-09-26T22:42:05.588571Z"
     }
    },
    "outputs": [],
@@ -568,10 +568,10 @@
      "start_time": "2021-03-18T00:42:51.772159Z"
     },
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:23.708688Z",
-     "iopub.status.busy": "2021-09-19T22:23:23.708397Z",
-     "iopub.status.idle": "2021-09-19T22:23:23.709973Z",
-     "shell.execute_reply": "2021-09-19T22:23:23.710164Z"
+     "iopub.execute_input": "2021-09-26T22:42:05.590955Z",
+     "iopub.status.busy": "2021-09-26T22:42:05.590367Z",
+     "iopub.status.idle": "2021-09-26T22:42:05.592966Z",
+     "shell.execute_reply": "2021-09-26T22:42:05.593247Z"
     }
    },
    "outputs": [],
@@ -602,10 +602,10 @@
      "start_time": "2021-03-18T00:42:51.795821Z"
     },
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:23.714054Z",
-     "iopub.status.busy": "2021-09-19T22:23:23.713585Z",
-     "iopub.status.idle": "2021-09-19T22:23:23.715977Z",
-     "shell.execute_reply": "2021-09-19T22:23:23.716177Z"
+     "iopub.execute_input": "2021-09-26T22:42:05.597841Z",
+     "iopub.status.busy": "2021-09-26T22:42:05.597547Z",
+     "iopub.status.idle": "2021-09-26T22:42:05.601374Z",
+     "shell.execute_reply": "2021-09-26T22:42:05.601111Z"
     }
    },
    "outputs": [
@@ -657,10 +657,10 @@
      "start_time": "2021-03-18T00:42:51.808859Z"
     },
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:23.718455Z",
-     "iopub.status.busy": "2021-09-19T22:23:23.718227Z",
-     "iopub.status.idle": "2021-09-19T22:23:23.720349Z",
-     "shell.execute_reply": "2021-09-19T22:23:23.720536Z"
+     "iopub.execute_input": "2021-09-26T22:42:05.604167Z",
+     "iopub.status.busy": "2021-09-26T22:42:05.603851Z",
+     "iopub.status.idle": "2021-09-26T22:42:05.607203Z",
+     "shell.execute_reply": "2021-09-26T22:42:05.607449Z"
     }
    },
    "outputs": [
