--- a/examples/1. simulate_and_plot.ipynb
+++ b/examples/1. simulate_and_plot.ipynb
@@ -26,10 +26,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:09.202509Z",
-     "iopub.status.busy": "2021-09-19T22:23:09.202205Z",
-     "iopub.status.idle": "2021-09-19T22:23:09.763791Z",
-     "shell.execute_reply": "2021-09-19T22:23:09.764283Z"
+     "iopub.execute_input": "2021-09-26T22:41:50.990637Z",
+     "iopub.status.busy": "2021-09-26T22:41:50.990262Z",
+     "iopub.status.idle": "2021-09-26T22:41:51.746010Z",
+     "shell.execute_reply": "2021-09-26T22:41:51.746242Z"
     }
    },
    "outputs": [],
@@ -53,10 +53,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:09.767502Z",
-     "iopub.status.busy": "2021-09-19T22:23:09.767146Z",
-     "iopub.status.idle": "2021-09-19T22:23:09.769324Z",
-     "shell.execute_reply": "2021-09-19T22:23:09.769580Z"
+     "iopub.execute_input": "2021-09-26T22:41:51.749684Z",
+     "iopub.status.busy": "2021-09-26T22:41:51.749364Z",
+     "iopub.status.idle": "2021-09-26T22:41:51.751471Z",
+     "shell.execute_reply": "2021-09-26T22:41:51.751673Z"
     }
    },
    "outputs": [],
@@ -115,10 +115,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:09.772051Z",
-     "iopub.status.busy": "2021-09-19T22:23:09.771299Z",
-     "iopub.status.idle": "2021-09-19T22:23:10.436020Z",
-     "shell.execute_reply": "2021-09-19T22:23:10.436501Z"
+     "iopub.execute_input": "2021-09-26T22:41:51.754326Z",
+     "iopub.status.busy": "2021-09-26T22:41:51.754057Z",
+     "iopub.status.idle": "2021-09-26T22:41:52.436905Z",
+     "shell.execute_reply": "2021-09-26T22:41:52.435959Z"
     }
    },
    "outputs": [
@@ -147,14 +147,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Input file parsed in 0.3871 seconds.\n"
+      "Input file parsed in 0.3950 seconds.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "System internal structure set up in 0.0455 seconds.\n"
+      "System internal structure set up in 0.0348 seconds.\n"
      ]
     },
     {
@@ -242,21 +242,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Converged in 5 iterations in 0.0147 seconds.\n"
+      "Converged in 5 iterations in 0.0100 seconds.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Report saved to \"kundur_full_out.txt\" in 0.0088 seconds.\n"
+      "Report saved to \"kundur_full_out.txt\" in 0.0017 seconds.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-> Single process finished in 0.6592 seconds.\n"
+      "-> Single process finished in 0.6702 seconds.\n"
      ]
     }
    ],
@@ -279,10 +279,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:10.440357Z",
-     "iopub.status.busy": "2021-09-19T22:23:10.439877Z",
-     "iopub.status.idle": "2021-09-19T22:23:10.441288Z",
-     "shell.execute_reply": "2021-09-19T22:23:10.441826Z"
+     "iopub.execute_input": "2021-09-26T22:41:52.441098Z",
+     "iopub.status.busy": "2021-09-26T22:41:52.440683Z",
+     "iopub.status.idle": "2021-09-26T22:41:52.443573Z",
+     "shell.execute_reply": "2021-09-26T22:41:52.443914Z"
     }
    },
    "outputs": [],
@@ -295,10 +295,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:10.445105Z",
-     "iopub.status.busy": "2021-09-19T22:23:10.444605Z",
-     "iopub.status.idle": "2021-09-19T22:23:11.486972Z",
-     "shell.execute_reply": "2021-09-19T22:23:11.487641Z"
+     "iopub.execute_input": "2021-09-26T22:41:52.448075Z",
+     "iopub.status.busy": "2021-09-26T22:41:52.447626Z",
+     "iopub.status.idle": "2021-09-26T22:41:53.537261Z",
+     "shell.execute_reply": "2021-09-26T22:41:53.537930Z"
     }
    },
    "outputs": [
@@ -317,7 +317,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Initialization for dynamics was successful in 0.0393 seconds.\n"
+      "Initialization for dynamics was successful in 0.0141 seconds.\n"
      ]
     },
     {
@@ -349,7 +349,7 @@
      "text": [
       "<Toggler 1>: Line.Line_8 status changed to 0 at t=2.0 sec.\n",
       "\r",
-      " 20%|██████▍                         | 20/100 [00:00<00:00, 358.06%/s]"
+      " 20%|██████▍                         | 20/100 [00:00<00:00, 342.27%/s]"
      ]
     },
     {
@@ -357,7 +357,7 @@
      "output_type": "stream",
      "text": [
       "\r",
-      " 22%|███████                         | 22/100 [00:00<00:00, 213.44%/s]"
+      " 24%|███████▋                        | 24/100 [00:00<00:00, 237.37%/s]"
      ]
     },
     {
@@ -365,7 +365,7 @@
      "output_type": "stream",
      "text": [
       "\r",
-      " 44%|██████████████                  | 44/100 [00:00<00:00, 124.45%/s]"
+      " 48%|███████████████▊                 | 48/100 [00:00<00:00, 95.66%/s]"
      ]
     },
     {
@@ -373,7 +373,7 @@
      "output_type": "stream",
      "text": [
       "\r",
-      " 59%|██████████████████▉             | 59/100 [00:00<00:00, 108.75%/s]"
+      " 62%|████████████████████▍            | 62/100 [00:00<00:00, 93.78%/s]"
      ]
     },
     {
@@ -381,7 +381,7 @@
      "output_type": "stream",
      "text": [
       "\r",
-      " 71%|██████████████████████▋         | 71/100 [00:00<00:00, 102.42%/s]"
+      " 74%|████████████████████████▍        | 74/100 [00:00<00:00, 91.50%/s]"
      ]
     },
     {
@@ -389,7 +389,7 @@
      "output_type": "stream",
      "text": [
       "\r",
-      " 82%|██████████████████████████▏     | 82/100 [00:00<00:00, 101.55%/s]"
+      " 85%|████████████████████████████     | 85/100 [00:00<00:00, 95.37%/s]"
      ]
     },
     {
@@ -397,7 +397,7 @@
      "output_type": "stream",
      "text": [
       "\r",
-      " 93%|██████████████████████████████▋  | 93/100 [00:00<00:00, 96.77%/s]"
+      " 96%|███████████████████████████████▋ | 96/100 [00:00<00:00, 92.67%/s]"
      ]
     },
     {
@@ -405,14 +405,21 @@
      "output_type": "stream",
      "text": [
       "\r",
-      "100%|███████████████████████████████| 100/100 [00:00<00:00, 106.14%/s]"
+      "100%|████████████████████████████████| 100/100 [00:01<00:00, 96.86%/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulation completed in 0.9448 seconds.\n"
+      "Simulation completed in 1.0348 seconds.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     },
     {
@@ -426,14 +433,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Outputs written in 0.0259 seconds.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Outputs written in 0.0149 seconds.\n"
      ]
     },
     {
@@ -465,10 +465,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:11.492166Z",
-     "iopub.status.busy": "2021-09-19T22:23:11.491246Z",
-     "iopub.status.idle": "2021-09-19T22:23:11.499309Z",
-     "shell.execute_reply": "2021-09-19T22:23:11.498923Z"
+     "iopub.execute_input": "2021-09-26T22:41:53.541525Z",
+     "iopub.status.busy": "2021-09-26T22:41:53.540627Z",
+     "iopub.status.idle": "2021-09-26T22:41:53.547697Z",
+     "shell.execute_reply": "2021-09-26T22:41:53.548290Z"
     }
    },
    "outputs": [
@@ -508,17 +508,17 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:11.504616Z",
-     "iopub.status.busy": "2021-09-19T22:23:11.503559Z",
-     "iopub.status.idle": "2021-09-19T22:23:11.508102Z",
-     "shell.execute_reply": "2021-09-19T22:23:11.507704Z"
+     "iopub.execute_input": "2021-09-26T22:41:53.552623Z",
+     "iopub.status.busy": "2021-09-26T22:41:53.551831Z",
+     "iopub.status.idle": "2021-09-26T22:41:53.558049Z",
+     "shell.execute_reply": "2021-09-26T22:41:53.558644Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<andes.plot.TDSData at 0x7f2cfa54ea00>"
+       "<andes.plot.TDSData at 0x7f3225da8dc0>"
       ]
      },
      "execution_count": 7,
@@ -542,10 +542,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:11.512592Z",
-     "iopub.status.busy": "2021-09-19T22:23:11.512152Z",
-     "iopub.status.idle": "2021-09-19T22:23:11.514650Z",
-     "shell.execute_reply": "2021-09-19T22:23:11.514968Z"
+     "iopub.execute_input": "2021-09-26T22:41:53.564755Z",
+     "iopub.status.busy": "2021-09-26T22:41:53.561054Z",
+     "iopub.status.idle": "2021-09-26T22:41:53.568327Z",
+     "shell.execute_reply": "2021-09-26T22:41:53.568876Z"
     }
    },
    "outputs": [],
@@ -574,10 +574,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:11.529970Z",
-     "iopub.status.busy": "2021-09-19T22:23:11.529403Z",
-     "iopub.status.idle": "2021-09-19T22:23:11.566066Z",
-     "shell.execute_reply": "2021-09-19T22:23:11.565541Z"
+     "iopub.execute_input": "2021-09-26T22:41:53.571748Z",
+     "iopub.status.busy": "2021-09-26T22:41:53.571326Z",
+     "iopub.status.idle": "2021-09-26T22:41:53.708530Z",
+     "shell.execute_reply": "2021-09-26T22:41:53.709134Z"
     }
    },
    "outputs": [
@@ -620,10 +620,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:11.570634Z",
-     "iopub.status.busy": "2021-09-19T22:23:11.569984Z",
-     "iopub.status.idle": "2021-09-19T22:23:12.215469Z",
-     "shell.execute_reply": "2021-09-19T22:23:12.215974Z"
+     "iopub.execute_input": "2021-09-26T22:41:53.713303Z",
+     "iopub.status.busy": "2021-09-26T22:41:53.711242Z",
+     "iopub.status.idle": "2021-09-26T22:41:54.460218Z",
+     "shell.execute_reply": "2021-09-26T22:41:54.460735Z"
     }
    },
    "outputs": [
@@ -672,10 +672,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:12.218493Z",
-     "iopub.status.busy": "2021-09-19T22:23:12.217811Z",
-     "iopub.status.idle": "2021-09-19T22:23:12.223450Z",
-     "shell.execute_reply": "2021-09-19T22:23:12.223992Z"
+     "iopub.execute_input": "2021-09-26T22:41:54.466707Z",
+     "iopub.status.busy": "2021-09-26T22:41:54.466216Z",
+     "iopub.status.idle": "2021-09-26T22:41:54.468849Z",
+     "shell.execute_reply": "2021-09-26T22:41:54.469335Z"
     }
    },
    "outputs": [
@@ -700,10 +700,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:12.226601Z",
-     "iopub.status.busy": "2021-09-19T22:23:12.225802Z",
-     "iopub.status.idle": "2021-09-19T22:23:12.860440Z",
-     "shell.execute_reply": "2021-09-19T22:23:12.861096Z"
+     "iopub.execute_input": "2021-09-26T22:41:54.471917Z",
+     "iopub.status.busy": "2021-09-26T22:41:54.471405Z",
+     "iopub.status.idle": "2021-09-26T22:41:55.362386Z",
+     "shell.execute_reply": "2021-09-26T22:41:55.363012Z"
     }
    },
    "outputs": [
@@ -745,10 +745,10 @@
    "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:12.864501Z",
-     "iopub.status.busy": "2021-09-19T22:23:12.863697Z",
-     "iopub.status.idle": "2021-09-19T22:23:13.238537Z",
-     "shell.execute_reply": "2021-09-19T22:23:13.239073Z"
+     "iopub.execute_input": "2021-09-26T22:41:55.366741Z",
+     "iopub.status.busy": "2021-09-26T22:41:55.365472Z",
+     "iopub.status.idle": "2021-09-26T22:41:55.679939Z",
+     "shell.execute_reply": "2021-09-26T22:41:55.680498Z"
     }
    },
    "outputs": [
@@ -781,10 +781,10 @@
    "execution_count": 14,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:13.241709Z",
-     "iopub.status.busy": "2021-09-19T22:23:13.241177Z",
-     "iopub.status.idle": "2021-09-19T22:23:13.666709Z",
-     "shell.execute_reply": "2021-09-19T22:23:13.667127Z"
+     "iopub.execute_input": "2021-09-26T22:41:55.683351Z",
+     "iopub.status.busy": "2021-09-26T22:41:55.682551Z",
+     "iopub.status.idle": "2021-09-26T22:41:56.012355Z",
+     "shell.execute_reply": "2021-09-26T22:41:56.012962Z"
     }
    },
    "outputs": [
@@ -826,10 +826,10 @@
    "execution_count": 15,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:13.678486Z",
-     "iopub.status.busy": "2021-09-19T22:23:13.674604Z",
-     "iopub.status.idle": "2021-09-19T22:23:13.856838Z",
-     "shell.execute_reply": "2021-09-19T22:23:13.857683Z"
+     "iopub.execute_input": "2021-09-26T22:41:56.015733Z",
+     "iopub.status.busy": "2021-09-26T22:41:56.014948Z",
+     "iopub.status.idle": "2021-09-26T22:41:56.149793Z",
+     "shell.execute_reply": "2021-09-26T22:41:56.150364Z"
     }
    },
    "outputs": [
@@ -871,10 +871,10 @@
    "execution_count": 16,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:13.861464Z",
-     "iopub.status.busy": "2021-09-19T22:23:13.860568Z",
-     "iopub.status.idle": "2021-09-19T22:23:14.059638Z",
-     "shell.execute_reply": "2021-09-19T22:23:14.060215Z"
+     "iopub.execute_input": "2021-09-26T22:41:56.155205Z",
+     "iopub.status.busy": "2021-09-26T22:41:56.154340Z",
+     "iopub.status.idle": "2021-09-26T22:41:56.431151Z",
+     "shell.execute_reply": "2021-09-26T22:41:56.431602Z"
     }
    },
    "outputs": [
@@ -907,10 +907,10 @@
    "execution_count": 17,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:14.063064Z",
-     "iopub.status.busy": "2021-09-19T22:23:14.062312Z",
-     "iopub.status.idle": "2021-09-19T22:23:14.262350Z",
-     "shell.execute_reply": "2021-09-19T22:23:14.262980Z"
+     "iopub.execute_input": "2021-09-26T22:41:56.435988Z",
+     "iopub.status.busy": "2021-09-26T22:41:56.435572Z",
+     "iopub.status.idle": "2021-09-26T22:41:56.700189Z",
+     "shell.execute_reply": "2021-09-26T22:41:56.699715Z"
     }
    },
    "outputs": [
@@ -959,10 +959,10 @@
    "execution_count": 18,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:14.265942Z",
-     "iopub.status.busy": "2021-09-19T22:23:14.265233Z",
-     "iopub.status.idle": "2021-09-19T22:23:14.494586Z",
-     "shell.execute_reply": "2021-09-19T22:23:14.495215Z"
+     "iopub.execute_input": "2021-09-26T22:41:56.718754Z",
+     "iopub.status.busy": "2021-09-26T22:41:56.718190Z",
+     "iopub.status.idle": "2021-09-26T22:41:56.986189Z",
+     "shell.execute_reply": "2021-09-26T22:41:56.986774Z"
     }
    },
    "outputs": [
@@ -995,10 +995,10 @@
    "execution_count": 19,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:14.498235Z",
-     "iopub.status.busy": "2021-09-19T22:23:14.497445Z",
-     "iopub.status.idle": "2021-09-19T22:23:14.741295Z",
-     "shell.execute_reply": "2021-09-19T22:23:14.741568Z"
+     "iopub.execute_input": "2021-09-26T22:41:56.994595Z",
+     "iopub.status.busy": "2021-09-26T22:41:56.990550Z",
+     "iopub.status.idle": "2021-09-26T22:41:57.287952Z",
+     "shell.execute_reply": "2021-09-26T22:41:57.287360Z"
     }
    },
    "outputs": [
@@ -1041,10 +1041,10 @@
    "execution_count": 20,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:14.744085Z",
-     "iopub.status.busy": "2021-09-19T22:23:14.743393Z",
-     "iopub.status.idle": "2021-09-19T22:23:15.171730Z",
-     "shell.execute_reply": "2021-09-19T22:23:15.171360Z"
+     "iopub.execute_input": "2021-09-26T22:41:57.291536Z",
+     "iopub.status.busy": "2021-09-26T22:41:57.291128Z",
+     "iopub.status.idle": "2021-09-26T22:41:57.769966Z",
+     "shell.execute_reply": "2021-09-26T22:41:57.770561Z"
     }
    },
    "outputs": [
@@ -1052,7 +1052,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Figure saved to \"kundur_full_out_1.png\".\n"
+      "Figure saved to \"kundur_full_out_2.png\".\n"
      ]
     },
     {
@@ -1091,10 +1091,10 @@
    "execution_count": 21,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:15.176238Z",
-     "iopub.status.busy": "2021-09-19T22:23:15.175950Z",
-     "iopub.status.idle": "2021-09-19T22:23:15.178794Z",
-     "shell.execute_reply": "2021-09-19T22:23:15.179357Z"
+     "iopub.execute_input": "2021-09-26T22:41:57.773348Z",
+     "iopub.status.busy": "2021-09-26T22:41:57.772578Z",
+     "iopub.status.idle": "2021-09-26T22:41:57.778334Z",
+     "shell.execute_reply": "2021-09-26T22:41:57.778872Z"
     }
    },
    "outputs": [
@@ -1214,10 +1214,10 @@
    "execution_count": 22,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:15.183511Z",
-     "iopub.status.busy": "2021-09-19T22:23:15.183024Z",
-     "iopub.status.idle": "2021-09-19T22:23:16.181599Z",
-     "shell.execute_reply": "2021-09-19T22:23:16.181344Z"
+     "iopub.execute_input": "2021-09-26T22:41:57.781472Z",
+     "iopub.status.busy": "2021-09-26T22:41:57.780695Z",
+     "iopub.status.idle": "2021-09-26T22:41:58.922479Z",
+     "shell.execute_reply": "2021-09-26T22:41:58.921929Z"
     }
    },
    "outputs": [
@@ -1226,15 +1226,12 @@
      "output_type": "stream",
      "text": [
       "\r\n",
-      "    _           _         | Version 1.4.2.post33.dev0+g135cb3eb\r\n",
-      "   /_\\  _ _  __| |___ ___ | Python 3.9.6 on Linux, 09/19/2021 05:23:15 PM\r\n",
+      "    _           _         | Version 1.4.2.post116.dev0+g832274a7\r\n",
+      "   /_\\  _ _  __| |___ ___ | Python 3.9.6 on Linux, 09/26/2021 05:41:58 PM\r\n",
       "  / _ \\| ' \\/ _` / -_|_-< | \r\n",
       " /_/ \\_\\_||_\\__,_\\___/__/ | This program comes with ABSOLUTELY NO WARRANTY.\r\n",
       "\r\n",
-      "\"/home/hcui7/repos/andes/examples/kundur_full_out.txt\" removed.\r\n",
-      "\"/home/hcui7/repos/andes/examples/kundur_full_out.npz\" removed.\r\n",
-      "\"/home/hcui7/repos/andes/examples/kundur_full_out.csv\" removed.\r\n",
-      "\"/home/hcui7/repos/andes/examples/kundur_full_out.lst\" removed.\r\n"
+      "\"/home/hcui7/repos/andes/examples/kundur_full_out.txt\" removed.\r\n"
      ]
     }
    ],
@@ -1247,10 +1244,10 @@
    "execution_count": 23,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-09-19T22:23:16.185872Z",
-     "iopub.status.busy": "2021-09-19T22:23:16.185399Z",
-     "iopub.status.idle": "2021-09-19T22:23:16.375850Z",
-     "shell.execute_reply": "2021-09-19T22:23:16.375545Z"
+     "iopub.execute_input": "2021-09-26T22:41:58.929993Z",
+     "iopub.status.busy": "2021-09-26T22:41:58.929572Z",
+     "iopub.status.idle": "2021-09-26T22:41:59.147013Z",
+     "shell.execute_reply": "2021-09-26T22:41:59.146712Z"
     }
    },
    "outputs": [],
