Redun demo for AC8B.

--- a/examples/demonstration/2.1 demo_AC8B.ipynb
+++ b/examples/demonstration/2.1 demo_AC8B.ipynb
@@ -44,42 +44,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Working directory: \"/home/hcui7/repos/andes/examples/demonstration\"\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loaded config from file \"/home/hcui7/.andes/andes.rc\"\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loaded generated Python code in \"~/.andes/pycode\".\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Parsing input file \"/home/hcui7/repos/andes/andes/cases/ieee14/ieee14_ac8b.xlsx\"...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Input file parsed in 0.4280 seconds.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "System internal structure set up in 0.0370 seconds.\n"
+      "Working directory: \"/Users/jinningwang/Documents/work/andes/examples/demonstration\"\n",
+      "Loaded config from file \"/Users/jinningwang/.andes/andes.rc\"\n",
+      "Loaded generated Python code in \"~/.andes/pycode\".\n",
+      "Parsing input file \"/Users/jinningwang/Documents/work/andes/andes/cases/ieee14/ieee14_ac8b.xlsx\"...\n",
+      "Input file parsed in 0.3972 seconds.\n",
+      "System internal structure set up in 0.0206 seconds.\n"
      ]
     },
     {
@@ -126,81 +96,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-> System connectivity check results:\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  No islanded bus detected.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  A total of 1 island(s) detected.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  Each island has a slack bus correctly defined and enabled.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "-> System connectivity check results:\n",
+      "  No islanded bus detected.\n",
+      "  A total of 1 island(s) detected.\n",
+      "  Each island has a slack bus correctly defined and enabled.\n",
       "\n",
       "-> Power flow calculation\n",
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
-      " Sparse addition: Fast in-place (kvxopt)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Power flow initialized.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0: |F(x)| = 0.5605182134\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1: |F(x)| = 0.006202200332\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2: |F(x)| = 5.819382825e-06\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "3: |F(x)| = 6.967745825e-12\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Converged in 4 iterations in 0.0074 seconds.\n"
+      " Sparse addition: Fast in-place (kvxopt)\n",
+      "Power flow initialized.\n",
+      "0: |F(x)| = 0.5605182134\n",
+      "1: |F(x)| = 0.006202200332\n",
+      "2: |F(x)| = 5.819382825e-06\n",
+      "3: |F(x)| = 6.967745825e-12\n",
+      "Converged in 4 iterations in 0.0059 seconds.\n",
+      "Initialization for dynamics was successful in 0.0219 seconds.\n"
      ]
     },
     {
@@ -237,302 +148,24 @@
       "\n",
       "-> Time Domain Simulation Summary:\n",
       "Sparse Solver: KLU\n",
-      "Simulation time: 0-20 s.\n",
+      "Simulation time: 0.0-20 s.\n",
       "Fixed step size: h=33.33 ms. Shrink if not converged.\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Initialization for dynamics was successful in 0.0255 seconds.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r",
-      "  0%|                                          | 0/100 [00:00<?, ?%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "                                                                      "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Toggler Toggler_1>: Line.Line_1 status changed to 0 at t=1.0 sec.\n",
-      "\r",
-      "  5%|█▋                                | 5/100 [00:00<00:01, 81.85%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "                                                                      "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Toggler Toggler_2>: Line.Line_1 status changed to 1 at t=1.1 sec.\n",
-      "\r",
-      "  6%|██                                | 6/100 [00:00<00:02, 46.38%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  7%|██▍                               | 7/100 [00:00<00:03, 27.08%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 10%|███▎                             | 10/100 [00:00<00:04, 19.51%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 13%|████▎                            | 13/100 [00:00<00:04, 21.16%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 16%|█████▎                           | 16/100 [00:00<00:03, 22.35%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 19%|██████▎                          | 19/100 [00:00<00:03, 23.23%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 22%|███████▎                         | 22/100 [00:00<00:03, 24.45%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 26%|████████▌                        | 26/100 [00:01<00:02, 26.73%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 29%|█████████▌                       | 29/100 [00:01<00:02, 25.92%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 32%|██████████▌                      | 32/100 [00:01<00:02, 25.60%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 35%|███████████▌                     | 35/100 [00:01<00:02, 23.09%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 38%|████████████▌                    | 38/100 [00:01<00:02, 22.36%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 42%|█████████████▊                   | 42/100 [00:01<00:02, 24.70%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 45%|██████████████▊                  | 45/100 [00:01<00:02, 24.03%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 48%|███████████████▊                 | 48/100 [00:01<00:02, 24.93%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 52%|█████████████████▏               | 52/100 [00:02<00:01, 27.32%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 56%|██████████████████▍              | 56/100 [00:02<00:01, 28.46%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 59%|███████████████████▍             | 59/100 [00:02<00:01, 28.49%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 62%|████████████████████▍            | 62/100 [00:02<00:01, 22.69%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 65%|█████████████████████▍           | 65/100 [00:02<00:01, 21.83%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 68%|██████████████████████▍          | 68/100 [00:02<00:01, 20.62%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 71%|███████████████████████▍         | 71/100 [00:03<00:01, 17.95%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 75%|████████████████████████▊        | 75/100 [00:03<00:01, 21.40%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 79%|██████████████████████████       | 79/100 [00:03<00:00, 24.36%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 83%|███████████████████████████▍     | 83/100 [00:03<00:00, 26.16%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 87%|████████████████████████████▋    | 87/100 [00:03<00:00, 28.94%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 92%|██████████████████████████████▎  | 92/100 [00:03<00:00, 33.71%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 96%|███████████████████████████████▋ | 96/100 [00:03<00:00, 32.63%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "100%|████████████████████████████████| 100/100 [00:03<00:00, 25.48%/s]"
+      "<Toggler Toggler_1>: Line.Line_1 status changed to 0 at t=1.0 sec.    \n",
+      "<Toggler Toggler_2>: Line.Line_1 status changed to 1 at t=1.1 sec.    \n",
+      "100%|████████████████████████████████| 100/100 [00:01<00:00, 63.70%/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulation completed in 3.9273 seconds.\n"
+      "Simulation completed in 1.5700 seconds.\n"
      ]
     },
     {
@@ -689,8 +322,8 @@
      "output_type": "stream",
      "text": [
       "\r\n",
-      "    _           _         | Version 1.4.2.post116.dev0+g832274a7\r\n",
-      "   /_\\  _ _  __| |___ ___ | Python 3.9.6 on Linux, 09/26/2021 05:41:58 PM\r\n",
+      "    _           _         | Version 1.4.2.post124.dev0+g02d523c9\r\n",
+      "   /_\\  _ _  __| |___ ___ | Python 3.7.10 on Darwin, 09/26/2021 09:26:05 PM\r\n",
       "  / _ \\| ' \\/ _` / -_|_-< | \r\n",
       " /_/ \\_\\_||_\\__,_\\___/__/ | This program comes with ABSOLUTELY NO WARRANTY.\r\n",
       "\r\n",
@@ -708,8 +341,9 @@
    "hash": "4c42303ec617988e96980582546035234a0dbb343f6614254a1d5bddbb9babb9"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit ('a': conda)",
-   "name": "python3"
+   "display_name": "Python 3.7.10 64-bit ('andes': conda)",
+   "language": "python",
+   "name": "python3710jvsc74a57bd0b8c542af61804583455bb3cc02c5acff1b7eab71b36b048085e6e502c5a0f30d"
   },
   "language_info": {
    "codemirror_mode": {
@@ -721,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
