--- a/examples/demonstration/2.1 demo_AC8B.ipynb
+++ b/examples/demonstration/2.1 demo_AC8B.ipynb
@@ -48,8 +48,8 @@
       "Loaded config from file \"/Users/jinningwang/.andes/andes.rc\"\n",
       "Loaded generated Python code in \"~/.andes/pycode\".\n",
       "Parsing input file \"/Users/jinningwang/Documents/work/andes/andes/cases/ieee14/ieee14_ac8b.xlsx\"...\n",
-      "Input file parsed in 0.3972 seconds.\n",
-      "System internal structure set up in 0.0206 seconds.\n"
+      "Input file parsed in 0.4746 seconds.\n",
+      "System internal structure set up in 0.0217 seconds.\n"
      ]
     },
     {
@@ -110,8 +110,13 @@
       "1: |F(x)| = 0.006202200332\n",
       "2: |F(x)| = 5.819382825e-06\n",
       "3: |F(x)| = 6.967745825e-12\n",
-      "Converged in 4 iterations in 0.0059 seconds.\n",
-      "Initialization for dynamics was successful in 0.0219 seconds.\n"
+      "Converged in 4 iterations in 0.0111 seconds.\n",
+      "/Users/jinningwang/.andes/pycode/AC8B.py:91: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  return (array([[FEX_y*INT_y - vf0], [-FEX_y + select([less_equal(IN, 0),less_equal(IN, 0.433),less_equal(IN, 0.75),less_equal(IN, 1),greater(IN, 1)], [1,1 - 0.577*IN,sqrt(0.75 - IN**2),1.732 - 1.732*IN,0], default=nan)], [-IN*INT_y + KC*XadIfd]]))\n",
+      "/Users/jinningwang/.andes/pycode/AC8B.py:94: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  return (array([[FEX_y, INT_y, 0], [0, -1, select([less_equal(IN, 0),less_equal(IN, 0.433),less_equal(IN, 0.75),less_equal(IN, 1),True], [0,-0.577,-IN/sqrt(0.75 - IN**2),-1.732,0], default=nan)], [-IN, 0, -INT_y]]))\n",
+      "Initialization for dynamics completed in 0.0230 seconds.\n",
+      "Initialization was successful.\n"
      ]
     },
     {
@@ -158,14 +163,14 @@
      "text": [
       "<Toggler Toggler_1>: Line.Line_1 status changed to 0 at t=1.0 sec.    \n",
       "<Toggler Toggler_2>: Line.Line_1 status changed to 1 at t=1.1 sec.    \n",
-      "100%|████████████████████████████████| 100/100 [00:01<00:00, 63.70%/s]"
+      "100%|████████████████████████████████| 100/100 [00:01<00:00, 65.07%/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulation completed in 1.5700 seconds.\n"
+      "Simulation completed in 1.5371 seconds.\n"
      ]
     },
     {
@@ -322,8 +327,8 @@
      "output_type": "stream",
      "text": [
       "\r\n",
-      "    _           _         | Version 1.4.2.post124.dev0+g02d523c9\r\n",
-      "   /_\\  _ _  __| |___ ___ | Python 3.7.10 on Darwin, 09/26/2021 09:26:05 PM\r\n",
+      "    _           _         | Version 1.4.2.post160.dev0+g912456c9\r\n",
+      "   /_\\  _ _  __| |___ ___ | Python 3.7.10 on Darwin, 10/04/2021 02:14:30 PM\r\n",
       "  / _ \\| ' \\/ _` / -_|_-< | \r\n",
       " /_/ \\_\\_||_\\__,_\\___/__/ | This program comes with ABSOLUTELY NO WARRANTY.\r\n",
       "\r\n",
@@ -341,9 +346,9 @@
    "hash": "4c42303ec617988e96980582546035234a0dbb343f6614254a1d5bddbb9babb9"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.10 64-bit ('andes': conda)",
+   "display_name": "andes",
    "language": "python",
-   "name": "python3710jvsc74a57bd0b8c542af61804583455bb3cc02c5acff1b7eab71b36b048085e6e502c5a0f30d"
+   "name": "andes"
   },
   "language_info": {
    "codemirror_mode": {
