--- a/examples/ex11.ipynb
+++ b/examples/ex11.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This example (1) shows how to convert an ANDES system (ssa) to a pandapower network (ssp) (2) benchmarks the powerflow results."
+    "This example (1) shows how to convert an ANDES system (ssa) to a pandapower network (ssp), (2) benchmarks the powerflow results, (3) shows how to alter ssa setpoints according to ssp results."
    ]
   },
   {
