Updated notebook titles.

--- a/examples/ex2.ipynb
+++ b/examples/ex2.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inspecting Data\n",
+    "# Working with Data\n",
     "\n",
-    "This example shows how to inspect the data of a loaded test system."
+    "This example shows how to work with the data of a loaded test system, including parameters and variables."
    ]
   },
   {
